# connect

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ConnectSDKConfig.h.in  LICENSE.txt  README.md  Vagrantfile  account_8h_source.html  annotated.html  bootstrap.sh  build-ios.sh  build.sh  build.txt  classes.html  classprism_1_1connect_1_1api_1_1_account-members.html  classprism_1_1connect_1_1api_1_1_account.html  classprism_1_1connect_1_1api_1_1_client-members.html  classprism_1_1connect_1_1api_1_1_client.html  classprism_1_1connect_1_1api_1_1_instrument-members.html  classprism_1_1connect_1_1api_1_1_instrument.html  client_8h_source.html  deps.cmake  dir_2d52abcd54c181b91d630da402923092.html  dir_d44c64559bbebec7f509842c48db8b23.html  environment_8h_source.html  files.html  functions.html  functions_func.html  index.html  instrument_8h_source.html  md__r_e_a_d_m_e.html  pages.html  structprism_1_1connect_1_1api_1_1_instrument_1_1_geo_location-members.html  structprism_1_1connect_1_1api_1_1_instrument_1_1_geo_location.html  structprism_1_1connect_1_1api_1_1_instrument_1_1_physical_address-members.html  structprism_1_1connect_1_1api_1_1_instrument_1_1_physical_address.html  version.cmake
docs/: Doxyfile
examples/: CMakeLists.txt
examples/youtube/: CMakeLists.txt  SConstruct
examples/youtube/src/: main.cpp
examples/yt_camera/: CMakeLists.txt  main.cpp
ext/easylogging-8.91/: LICENSE.txt  download.txt  easylogging++.h
ext/rapidjson-1.1.0/: download.txt
ide/QtCreator/: ConnectSDK.files  ConnectSDK.includes
include/: artifact-uploader.h  client.h  common-types.h  connect.h  const-strings.h  curl-session.h  domain-types.h  payload-holder.h  public-util.h  util.h
include/api/: account.h  client.h  environment.h  instrument.h  response.h
include/private/: ArtifactUploadHelper.h  ArtifactUploader.h  ConcurrentQueue.h  OutputController.h  PoolBasedCurlFactory.h  PrismConnectService.h  UploadArtifactTask.h  UploadObjectsBuilder.h  UploadQueue.h  UploadTaskQueuer.h  const-strings.h  curl-session.h  curl-wrapper.h  util.h
include/processors/: background.h  object-stream.h  track-collector.h  track.h
include/sources/: file-source.h  frame-buffer.h  source-interface.h
include/util/: string.h  time.h
opt/: CMakeLists.txt
search/: all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_4.js  functions_0.js  pages_0.js  searchdata.js
src/: ArtifactUploadHelper.cpp  ArtifactUploader.cpp  CMakeLists.txt  OutputController.cpp  PrismConnectService.cpp  UploadArtifactTask.cpp  UploadObjectsBuilder.cpp  UploadQueue.cpp  UploadTaskQueuer.cpp  artifact-uploader.cpp  client.cpp  connect.cpp  const-strings.cpp  curl-session.cpp  curl-wrapper.cpp  domain-types.cpp  payload-holder.cpp  public-util.cpp  util.cpp
src/api/: account.cpp  client.cpp  environment.cpp  instrument.cpp
src/executables/: CMakeLists.txt  echo-instrument.cpp  get-account.cpp  get-instrument.cpp  list-accounts.cpp  list-instruments.cpp
src/processors/: background.cpp  object-stream.cpp  track-collector.cpp  track.cpp
src/sources/: file-source.cpp
src/util/: string.cpp  time.cpp
tests/test-client/: CMakeLists.txt  main.cpp
